Package Json name update to correct error npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clientside authentication react redux",
+  "name": "clientside_authentication_react_redux",
   "version": "1.0.0",
   "description": "clientside authentication react redux",
   "main": "index.js",
