global variables protected

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "client/.snyk": true,
     "3.8.1": true,
     ".eslintrc.json": true,
-    ".eslintignore": true
+    ".eslintignore": true,
+    ".env": true
 }
 }
